# Scientific_Calculator.

./: CMakeLists.txt  main.cpp
includes/: Matrix.h  MatrixExprSolver.h  Token.h  tokens.h
src/: ArithmeticExprSolver.cpp  ExprSolver.cpp  Matrix.cpp  MatrixExprSolver.cpp  Token.cpp  tokens.cpp
